[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lb-unixbench-plugin"
version = "0.2.0"
description = "UnixBench workload plugin for linux-benchmark-lib"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "linux-benchmark contributors" }
]
dependencies = [
  "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
]

[project.entry-points."linux_benchmark.workloads"]
unixbench = "lb_unixbench_plugin.plugin:PLUGIN"

[tool.setuptools.package-data]
lb_unixbench_plugin = ["ansible/**/*"]

[tool.black]
line-length = 88
